--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "vaadin-upload": "^1.1.1",
     "paper-radio-group": "PolymerElements/paper-radio-group#^1.2.1",
     "vaadin-date-picker": "^1.2.1",
-    "google-chart": "GoogleWebComponents/google-chart#^1.1.1"
+    "google-chart": "GoogleWebComponents/google-chart#^1.1.1",
+    "paper-autocomplete": "^2.3.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
