DASH-3437 [Backend] SSO resource can be shared to unmanaged users

--- a/src/components/components/data/appsco-api-errors.json
+++ b/src/components/components/data/appsco-api-errors.json
@@ -30,6 +30,7 @@
         "1516956552": "Your CSR is not valid.",
         "1516956597": "Error reading CA certificate",
         "1516956621": "Error reading CA key",
-        "1519976197": "In order to remove this dashboard folder, you must move all the resources to dashboard or other folders first."
+        "1519976197": "In order to remove this dashboard folder, you must move all the resources to dashboard or other folders first.",
+        "1527861903": "Cannot share SSO resource to unmanaged account"
     }
 }
