--- a/src/components/components/data/appsco-api-errors.json
+++ b/src/components/components/data/appsco-api-errors.json
@@ -34,6 +34,7 @@
         "1527861903": "Cannot share SSO resource to unmanaged account",
         "1544184895": "Can not assign fewer licences than active users",
         "1519737987": "Not enough licences are available to complete the operation",
-        "1546506588": "Contact with same email exists in company"
+        "1546506588": "Contact with same email exists in company",
+        "1555935569": "Force sync failed due to missing source PSO records. This can be fixed by re-provisioning records that miss source PSO (most often achievable by running lookup recipes again), or by removing them"
     }
 }
