DASH-3803 [Frontend][Provisioning] Add Force sync option

--- a/src/components/components/data/appsco-api-errors.json
+++ b/src/components/components/data/appsco-api-errors.json
@@ -35,6 +35,6 @@
         "1544184895": "Can not assign fewer licences than active users",
         "1519737987": "Not enough licences are available to complete the operation",
         "1546506588": "Contact with same email exists in company",
-        "1555935569": "Force sync failed due to missing source PSO records. This can be fixed by re-provisioning records that miss source PSO (most often achievable by running lookup recipes again), or by removing them"
+        "1555935569": "Resync failed due to missing source PSO records. This can be fixed by re-provisioning records that miss source PSO (most often achievable by running lookup recipes again), or by removing them"
     }
 }
