--- a/package.json
+++ b/package.json
@@ -63,5 +63,6 @@
     "@polymer/iron-demo-helpers": "^3.0.0",
     "wct-browser-legacy": "^1.0.1",
     "@polymer/paper-toast": "^3.0.0"
-  }
+  },
+  "vaadin": { "disableUsageStatistics": true }
 }
