--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@vaadin/vaadin-upload": "^4.2.2",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "clientjs": "^0.1.11",
-    "google-charts": "^2.0.0"
+    "google-charts": "^2.0.0",
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "web-animations-js": "^2.3.1",
@@ -63,5 +64,7 @@
     "@polymer/iron-demo-helpers": "^3.0.0",
     "wct-browser-legacy": "^1.0.1"
   },
-  "vaadin": { "disableUsageStatistics": true }
+  "vaadin": {
+    "disableUsageStatistics": true
+  }
 }
