--- a/package.json
+++ b/package.json
@@ -59,10 +59,7 @@
     "popper.js": "^1.14.4"
   },
   "devDependencies": {
-    "web-animations-js": "^2.3.1",
-    "@polymer/iron-component-page": "^4.0.0",
-    "@polymer/iron-demo-helpers": "^3.0.0",
-    "wct-browser-legacy": "^1.0.1"
+    "web-animations-js": "^2.3.1"
   },
   "vaadin": {
     "disableUsageStatistics": true
