--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@vaadin/vaadin-upload": "^4.2.2",
     "@webcomponents/webcomponentsjs": "^2.0.0",
     "clientjs": "^0.1.11",
-    "google-charts": "^2.0.0",
+    "@google-web-components/google-chart": "^3.3.1",
     "popper.js": "^1.14.4"
   },
   "devDependencies": {
